--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -2,12 +2,12 @@
   "name": "polyglottal",
   "version": "0.1.0",
   "private": true,
-  "proxy":"https://localhost:5001",
+  "proxy": "https://localhost:5001",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "jquery": "3.3.1",
+    "jquery": "3.4.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react-dom": ">=16.2.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.5",
@@ -23,7 +23,10 @@
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "handlebars": ">=4.0.14",
+    "lodash": ">=4.17.13",
+    "merge": ">=1.2.1"
   },
   "eslintConfig": {
     "extends": "react-app"
