--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -10,7 +10,7 @@
     "react-dom": ">=16.2.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^3.1.1",
     "reactstrap": "^6.3.0",
     "rimraf": "^2.6.2"
   },
@@ -26,7 +26,9 @@
     "eslint-plugin-react": "^7.11.1",
     "handlebars": ">=4.0.14",
     "lodash": ">=4.17.13",
-    "merge": ">=1.2.1"
+    "merge": ">=1.2.1",
+    "mixin-deep": ">=1.3.2",
+    "set-value": "~>2.0.1"
   },
   "eslintConfig": {
     "extends": "react-app"
