--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://localhost:5001",
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jquery": "3.4.0",
     "react": "^16.0.0",
@@ -16,9 +17,7 @@
   },
   "devDependencies": {
     "ajv": "^6.0.0",
-    "babel-eslint": "^7.2.3",
     "cross-env": "^5.2.0",
-    "eslint": "^4.1.1",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.14.0",
@@ -39,5 +38,17 @@
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
